#23 [1h] fix PMD warnings